@@ -191,6 +191,11 @@ function opt = mpoption(varargin)
 %   out.lim.qg              1           control gen reactive pwr limit info
 %   out.force               0           print results even if success
 %                                       flag = 0                   [ 0 or 1 ]
+%   out.suppress_detail     -1          suppress all output but system summary
+%       [  -1 - suppress details for large systems (> 500 buses)            ]
+%       [   0 - do not suppress any output specified by other flags         ]
+%       [   1 - suppress all output except system summary section           ]
+%       [       (overrides individual flags, but not out.all = 1)           ]
 %
 %Solver specific options:
 %       name                    default     description [options]
@@ -1362,7 +1367,8 @@ opt = struct(...
             'line',                 1, ...
             'pg',                   1, ...
             'qg',                   1   ), ...
-        'force',                0   ), ...
+        'force',                0, ...
+        'suppress_detail',      -1  ), ...
     'mips',                 struct(...
         'step_control',         0, ...
         'feastol',              0, ...
